<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_margin="5dp">

    <EditText
        android:id="@+id/reviewTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Review Title"
        />

    <EditText
        android:id="@+id/reviewerEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Reviewer"
        />

    <EditText
        android:id="@+id/reviewEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Comment"
        />

    <EditText
        android:id="@+id/starEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Rating"
        android:inputType="numberDecimal"
        />
</LinearLayout>