...
            android:layout_marginTop="10dp">

            <!--
               CREATE REVIEW BUTTON COMPONENT
            -->
            <Button
                android:id="@+id/createReviewButton"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:text="Create Review" />

            <!--
                PARK AVG. STARS LAYOUT
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/ReviewList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@android:color/transparent"
                android:dividerHeight="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>
...
