<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="Home"/>

    <item
        android:id="@+id/nav_maps"
        android:icon="@drawable/ic_baseline_place_24"
        android:title="Map" />

    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_baseline_nordic_walking_24"
        android:title="Explore" />

    <item
        android:id="@+id/nav_reviews"
        android:icon="@drawable/ic_baseline_stars_24"
        android:title="Reviews" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_baseline_history_edu_24"
        android:title="Park History" />

</menu>